src/main/docker/k8s/all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fr.correctexam.service: back
  name: back
  namespace: correctexam
spec:
  replicas: 1
  selector:
    matchLabels:
      fr.correctexam.service: back
  strategy: {}
  template:
    metadata:
      labels:
        fr.correctexam.service: back
    spec:
      containers:
        - args:
            - ./application
            - -Dquarkus.http.host=0.0.0.0
            - -Dquarkus.datasource.username=root
            - -Dquarkus.datasource.password=
            - -Dquarkus.datasource.jdbc.url=jdbc:mysql://correctexam-mysql:3306/correctexam?useUnicode=true&characterEncoding=utf8&useSSL=false
            - -Dquarkus.http.cors=true
            - -Dquarkus.http.cors.methods=GET,PUT,POST,DELETE,PATCH,OPTIONS
            - -Dquarkus.http.cors.headers=accept,origin,authorization,content-type,x-requested-with
            - -Dquarkus.http.cors.exposed-headers=Content-Disposition
            - -Dquarkus.http.cors.access-control-max-age=24H
            - -Dquarkus.mailer.from=olivier.barais@univ-rennes1.fr
            - -Dquarkus.mailer.host=maildev
            - -Dquarkus.mailer.port=1025
            - -Dquarkus.mailer.ssl=false
            - -Djhipster.mail.base-url=http://localhost:9000
            - -Dquarkus.minio.allow-empty=false
            - -Dcorrectexam.bucketname=correctexam
            - -Dcorrectexam.uses3=true
            - -Dquarkus.minio.url=http://minio:9000
            - -Dquarkus.minio.access-key=minioadmin
            - -Dquarkus.minio.secret-key=minioadmin
          image: localhost:32000/barais/correctexam-back
          name: back
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    fr.correctexam.service: back
  name: back
  namespace: correctexam
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    fr.correctexam.service: back
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fr.correctexam.service: correctexam-mysql
  name: correctexam-mysql
  namespace: correctexam
spec:
  replicas: 1
  selector:
    matchLabels:
      fr.correctexam.service: correctexam-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        fr.correctexam.service: correctexam-mysql
    spec:
      containers:
        - args:
            - mysqld
            - --lower_case_table_names=1
            - --skip-ssl
            - --character_set_server=utf8mb4
            - --explicit_defaults_for_timestamp
          image: mysql:8.0.20
          name: correctexam-mysql
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/v1.sql
              name: correctexam-mysql-claim0
              subPath: v1Sql
      restartPolicy: Always
      volumes:
        - name: correctexam-mysql-claim0
          configMap:
            name: mysqlinit-cfgmap
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    fr.correctexam.service: correctexam-mysql
  name: correctexam-mysql
  namespace: correctexam
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    fr.correctexam.service: correctexam-mysql
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fr.correctexam.service: front
  name: front
  namespace: correctexam
spec:
  replicas: 1
  selector:
    matchLabels:
      fr.correctexam.service: front
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        fr.correctexam.service: front
    spec:
      containers:
        - image: localhost:32000/barais/correctexam-front
          name: front
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Service
metadata:
  labels:
    fr.correctexam.service: front
  name: front
  namespace: correctexam
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    fr.correctexam.service: front
status:
  loadBalancer: {}

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: correctexam
  annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/proxy-body-size: "10G"
      nginx.ingress.kubernetes.io/proxy-buffering: "off"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
  namespace: correctexam
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /management
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /services
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /swagger-ui
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /v3/api-docs
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /maildev
        pathType: Prefix
        backend:
          service:
            name: maildev
            port:
              number: 1080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: correctexam
  annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/proxy-body-size: "10G"
      nginx.ingress.kubernetes.io/proxy-buffering: "off"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
  namespace: correctexam
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /management
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /services
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /swagger-ui
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /v3/api-docs
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: back
            port:
              number: 8080
      - path: /maildev
        pathType: Prefix
        backend:
          service:
            name: maildev
            port:
              number: 1080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 80


---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    fr.correctexam.service: maildev
  name: maildev
  namespace: correctexam
spec:
  replicas: 1
  selector:
    matchLabels:
      fr.correctexam.service: maildev
  strategy: {}
  template:
    metadata:
      labels:
        fr.correctexam.service: maildev
    spec:
      containers:
        - args:
            - bin/maildev
            - --base-pathname
            - /maildev
            - -w
            - "1080"
            - -s
            - "1025"
          image: maildev/maildev
          name: maildev
          ports:
            - containerPort: 1080
            - containerPort: 25
          resources: {}
      restartPolicy: Always
status: {}


---
apiVersion: v1
kind: Service
metadata:
  labels:
    fr.correctexam.service: maildev
  name: maildev
  namespace: correctexam
spec:
  ports:
    - name: "1080"
      port: 1080
      targetPort: 1080
    - name: "25"
      port: 25
      targetPort: 25
  selector:
    fr.correctexam.service: maildev
status:
  loadBalancer: {}


---

# Deploys a new MinIO Pod into the metadata.namespace Kubernetes namespace
#
# The `spec.containers[0].args` contains the command run on the pod
# The `/data` directory corresponds to the `spec.containers[0].volumeMounts[0].mountPath`
# That mount path corresponds to a Kubernetes HostPath which binds `/data` to a local drive or volume on the worker node where the pod runs
#
apiVersion: v1
kind: Pod
metadata:
  labels:
    fr.correctexam.service: minio
  name: minio
  namespace: correctexam # Change this value to match the namespace metadata.name
spec:
  containers:
  - name: minio
    image: quay.io/minio/minio:latest
    resources: {}
    command:
    - /bin/bash
    - -c
    args:
    - minio server /data --console-address :9090
    volumeMounts:
    - mountPath: /data
      name: localvolume # Corresponds to the `spec.volumes` Persistent Volume
#  nodeSelector:
#    kubernetes.io/hostname: kubealpha.local # Specify a node label associated to the Worker Node on which you want to deploy the pod.
  volumes:
  - name: localvolume
    hostPath: # MinIO generally recommends using locally-attached volumes
      path: /data # Specify a path to a local drive or volume on the Kubernetes worker node
      type: DirectoryOrCreate # The path to the last directory must exist
---

apiVersion: v1
kind: Service
metadata:
  labels:
    fr.correctexam.service: minio
  name: minio
  namespace: correctexam

spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
    - name: "9000"
      port: 9000
      targetPort: 9000

  selector:
    fr.correctexam.service: minio
status:
  loadBalancer: {}


---
# Deploys a new Namespace for the correctexam Pods
apiVersion: v1
kind: Namespace
metadata:
  name: correctexam # Change this value if you want a different namespace name
  labels:
    name: correctexam # Change this value to match metadata.name
---
